# Semantic-ID-Generation

./: .gitignore  CLAUDE.md  README.md  environment.yml  generate_semids.py  hyperparameter.py  main.py  pyproject.toml  test_naive_baselines.py  test_sasrec.py  test_seq2seq.py  train_quantizer.py  train_rq_vae.py  train_rqkmeans.py  train_sasrec.py  train_seq2seq.py
config/: config_amazon_tiger.yaml  config_amazon_tiger_v3_cosine_gumbel.yaml  config_amazon_tiger_v3_l2_gumbel.yaml  config_amazon_tiger_v3_l2_ste.yaml  config_amazon_v2_gumbel.yaml  config_amazon_v2_ste.yaml  config_ml100k_item.yaml  config_ml1m_entity.yaml  config_ml1m_item.yaml
config/archive/: amazon_beauty_grid_lr.yaml  config_amazon.yaml  config_amazon_rqkmeans.yaml  config_amazon_sasrec_tiger.yaml  config_amazon_tiger_v3.yaml  config_amazon_tiger_v3_cosine_gumbel.yaml  config_amazon_tiger_v3_l2_gumbel.yaml  config_amazon_tiger_v3_l2_ste.yaml  config_amazon_tiger_v4.yaml  config_amazon_tiger_v4_32lat.yaml  config_amazon_tiger_v5_adagrad.yaml  config_amazon_tiger_v5_adagrad_warmup.yaml  config_amazon_tiger_v6_grid.yaml  config_amazon_tiger_v6_grid_256.yaml  config_amazon_tiger_v6_tiger.yaml  config_ml1m_relation.yaml  config_ml1m_user.yaml
config/fsq/: amazon_beauty.yaml  (+5 more)
data/: amazon_data.py  factory.py  loader.py  ml1m.py  preprocessing.py  sequence.py
modules/: encoder.py  quantization.py  rq_vae.py  seq2seq.py  temperature_scheduler.py
schemas/: quantization.py  rq_vae.py  vae.py
tests/: conftest.py
utils/: metrics.py  model_id_generation.py  seed.py  sid_evaluation.py  wandb.py
(+41 files in other folders)
